--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> About | Prime Bus AE</title>
+    <title> About | Prime Bus UK</title>
 
     <!-- favicons Icons -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/primebus-images/fav.png" />
@@ -578,7 +578,8 @@
                             <div class="site-footer__bottom-inner">
                                 <p class="site-footer__bottom-text">© All Copyright 2025 by <a
                                         href="https://primebus.co.uk" target="_blank">Primebus.co.uk</a> | Designed by
-                                    <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
+                                    <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a>
+                                </p>
                             </div>
                         </div>
                     </div>
