--- a/airport-transfer.html
+++ b/airport-transfer.html
@@ -5,7 +5,7 @@
      <meta charset="UTF-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <title>Airport Transfer | Best Airport Transfer Service in UK</title>
-     <meta name="description" content="Prime bus AE" />
+     <meta name="description" content="Prime Bus UK" />
      <!-- favicons Icons -->
      <link rel="icon" type="image/png" sizes="32x32" href="assets/primebus-images/fav.png" />
      <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
@@ -201,7 +201,8 @@
                                                   week.</b>
                                         </p>
                                         <p class="service-details__text-3 text-just">Whether you’re arriving at or
-                                             departing from UK International Airport or any other airport in the region, Prime Bus
+                                             departing from UK International Airport or any other airport in the region,
+                                             Prime Bus
                                              offers reliable, comfortable, and professional chauffeur-driven transfers.
                                              We also provide executive coaches ideal for group travel, corporate events,
                                              hotel transfers, and tourism services. All bookings are simple and
