--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
      <meta charset="UTF-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <title>Service | Prime Bus</title>
-     <meta name="description" content="Prime bus AE" />
+     <meta name="description" content="Prime Bus UK" />
      <!-- favicons Icons -->
      <link rel="icon" type="image/png" sizes="32x32" href="assets/primebus-images/fav.png" />
      <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
@@ -176,10 +176,10 @@
                                              </div>
                                              <div class="content">
                                                   <h4>Business Location</h4>
-                                                  <p>Unit H5 Gatwick Business Park, <br> 
+                                                  <p>Unit H5 Gatwick Business Park, <br>
                                                        Kennel Lane, Hookwood Horley, <br>
-                                                       England RH6 0AH 
-                                                       </p>
+                                                       England RH6 0AH
+                                                  </p>
                                              </div>
                                         </li>
                                    </ul>
