--- a/fleet.html
+++ b/fleet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Service | Prime Bus</title>
-    <meta name="description" content="Prime bus AE" />
+    <meta name="description" content="Prime Bus UK" />
     <!-- favicons Icons -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/primebus-images/fav.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
@@ -1012,7 +1012,8 @@
                             <div class="site-footer__bottom-inner">
                                 <p class="site-footer__bottom-text">© All Copyright 2025 by <a
                                         href="https://primebus.co.uk" target="_blank">Primebus.co.uk</a> | Designed by
-                                    <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
+                                    <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a>
+                                </p>
                             </div>
                         </div>
                     </div>
