--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,7 +5,7 @@
      <meta charset="UTF-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <title>Privacy Policy | Prime Bus</title>
-     <meta name="description" content="Prime bus AE" />
+     <meta name="description" content="Prime Bus UK" />
      <!-- favicons Icons -->
      <link rel="icon" type="image/png" sizes="32x32" href="assets/primebus-images/fav.png" />
      <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
