--- a/terms-condition.html
+++ b/terms-condition.html
@@ -210,7 +210,7 @@
                                              <span class="icon-tick"></span>
                                              <p>Payments can be made by cash, cheque, credit card, and bank transfer.
                                                   Please note, payments by bank transfers are applicable for hires
-                                                  commencing at least 12 working days of AE Banks. Payment by credit
+                                                  commencing at least 12 working days of UK Banks. Payment by credit
                                                   card may incur an additional 5% surcharge.</p>
                                         </div>
                                         <div class="terms-point">
