--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!-- favicons Icons -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/primebus-images/fav.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Primebus AE" />
+    <meta name="description" content="Primebus UK" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
