--- a/contact.html
+++ b/contact.html
@@ -235,10 +235,7 @@
 
           <!--Google Map Start-->
           <section class="google-map google-map-two">
-               <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1972.92982072999!2d55.3155320562744!3d25.27975138121298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1753268532403!5m2!1sen!2sin"
-                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116148.39690309609!2d-0.3645752244168866!3d51.23960762252144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4875efe4c9b74707%3A0x7656b0c96aee2ae8!2sGatwick%20Business%20Park!5e1!3m2!1sen!2sin!4v1764566988074!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </section>
           <!--Google Map End-->
 
